--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <div id="blurEffect" class="row col-md-12 flex-row">
+        <div id="blurEffect" class="row col-md-12 col-12 flex-row">
             <div class="col-md-3 col-sm-12 col-12 flex-column">
                 <div class="mb-5">
                     <h1>how I <br>fight <br>your Bro</h1>
@@ -30,7 +30,7 @@
                             <div id="tedWeapon" class="weaponTie"></div>
                         </div>
                         <div>
-                            <span>Health : <span class="player1Xp">100</span></span>
+                            <span>Health : <span class="player1Pv">100</span></span>
                         </div>
                     </div>
                 </div>
@@ -44,12 +44,12 @@
                             <div id="barneyWeapon" class="weaponTie"></div>
                         </div>
                         <div>
-                            <span>Health : <span class="player2Xp">100</span></span>
+                            <span>Health : <span class="player2Pv">100</span></span>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-sm-12 col-12 d-flex row justify-content-center game"></div>
+            <div class="col-md-6 col-sm-12 col-12 row justify-content-center game"></div>
             <div class="col-md-3 col-sm-12 col-12 flex-column d-flex align-vertical">
                 <div class="mb-4">
                     <img src="assets/tie-big.png">
@@ -74,7 +74,7 @@
         <div class="modal d-none" id="modalFight" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog" role="document">
-                <div class="modal-content">
+                <div class="modal-content shadow">
                     <div class="modal-header justify-content-center">
                         <h5 class="modal-title">A fight is coming, and it will be legendary !
                         </h5>
@@ -89,8 +89,8 @@
                             <div id="barneyWeaponModal" class="weaponTie"></div>
                         </div>
                         <div class="d-flex flex-row justify-content-around">
-                            <div><span class="player1Xp">100</span></div>
-                            <div><span class="player2Xp">100</span></div>
+                            <div><span class="player1Pv">100</span></div>
+                            <div><span class="player2Pv">100</span></div>
                         </div>
                         <div class="modal-footer justify-content-center mt-3">
                             <button type="button" class="btn btn-primary attack">Attack</button>
@@ -105,7 +105,7 @@
         <div class="modal d-none" id="modalEndGame" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog" role="document">
-                <div class="modal-content">
+                <div class="modal-content shadow">
                     <div class="modal-header">
                         <h5 id="modalWinner" class="modal-title">And the winner is</h5>
                     </div>
@@ -124,6 +124,8 @@
 
 <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
+
+<script src='./fight.js'></script>
 <script src='./game.js'></script>
 <script src='./board.js'></script>
 <script src="./game-attribute.js"></script>
