Ajout des commentaires

--- a/game-oop/index.html
+++ b/game-oop/index.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- CSS file -->
+    <!-- CSS files -->
     <link rel="stylesheet" href="custom.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -121,18 +121,18 @@
                 </div>
             </div>
         </div>
-
     </div>
-</body>
 
-<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-    crossorigin="anonymous"></script>
-<script src='./fight.js'></script>
-<script src='./game.js'></script>
-<script src='./board.js'></script>
-<script src="./game-attribute.js"></script>
-<script src='./players.js'></script>
-<script src='./weapons.js'></script>
-<script src='./app.js'></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src='./fight.js'></script>
+    <script src='./game.js'></script>
+    <script src='./board.js'></script>
+    <script src="./game-attribute.js"></script>
+    <script src='./players.js'></script>
+    <script src='./weapons.js'></script>
+    <script src='./app.js'></script>
+
+</body>
 
 </html>
